# base_fastapi_postgres_docker

./: .env  .env.temp  .gitignore  Readme.md  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
app/: config.py  dependencies.py  main.py
app/models/: speedster.py
app/repositories/: speedsters.py
app/routers/: speedsters.py
app/schemas/: speedster.py
migrations/: env.py
