[tool.poetry]
name = "test"
version = "0.1.0"
description = "Тествовая база данных с fastapi"
authors = ["semen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
psycopg2-binary = "^2.9.3"
pydantic = {extras = ["email", "dotenv"], version = "^1.9.1"}
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
